<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/activity_container"
    tools:context=".MainActivity">

    <TextView
        android:text="@string/my_apps"
        style="@style/content_header" />

    <Button
        android:id="@+id/spotify_btn"
        android:text="@string/spotify_streamer"
        style="@style/jp_btn" />

    <Button
        android:id="@+id/scores_btn"
        android:text="@string/scores_app"
        style="@style/jp_btn" />

    <Button
        android:id="@+id/library_btn"
        android:text="@string/library_app"
        style="@style/jp_btn"/>

    <Button
        android:id="@+id/build_it_btn"
        android:text="@string/build_it_bigger"
        style="@style/jp_btn" />

    <Button
        android:id="@+id/reader_btn"
        android:text="@string/xyz_reader"
        style="@style/jp_btn"/>

    <Button
        android:id="@+id/capstone_btn"
        android:text="@string/capstone"
        style="@style/jp_btn.jp_accent_btn"/>

</LinearLayout>
